plugins {
    id 'java'
    id 'idea'
}

allprojects {
    group 'com.tvd12.examples'
    version '1.0.0'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    sourceCompatibility = 1.8

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'com.tvd12:ezyfox-bean:1.2.1'
        implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.2'

        compileOnly 'org.projectlombok:lombok:1.18.20'
        annotationProcessor 'org.projectlombok:lombok:1.18.20'

        testImplementation 'com.tvd12:test-util:1.1.0'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    }

    test {
        useJUnitPlatform()
    }
}
